--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^7"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
