--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "database/query-builder",
+    "name": "brunogasparetto/query-builder",
     "description": "Simplistic Query Builder using PDO",
     "type": "library",
     "license": "MIT",
@@ -11,12 +11,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "Database\\QueryBuilder\\": "src/"
+            "QueryBuilder\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Database\\QueryBuilder\\Tests\\": "tests/"
+            "QueryBuilder\\Tests\\": "tests/"
         }
     },
     "require": {
